@@ -1,4 +1,8 @@
-# ChangeLog for riss
+# ChangeLog for Coprocessor
+
+
+
+ * add hyper binary resolution
 
 ## v5.0.3
 
